better error handling for wrong types for query/sort SERVER-2228