jstests/mr_errorhandling.js
@@ -45,3 +45,5 @@ assert( theerror.indexOf( "emit" ) >= 0 , "B3" );
 res = t.mapReduce( m_good , r , "mr_errorhandling_out" );
 assert.eq( { 1 : 1 , 2 : 2 , 3 : 2 , 4 : 1 } , res.convertToSingleObject() , "A" );
 res.drop()
+
+assert.throws( function(){ t.mapReduce( m_good , r , { out : "xxx" , query : "foo" } ); } )
